k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opsdesk-ingress
  namespace: opsdesk
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["opsdesk.local", "api.opsdesk.local", "grafana.opsdesk.local"]
      secretName: opsdesk-tls
  rules:
    - host: opsdesk.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opsdesk-frontend
                port: { number: 80 }
    - host: api.opsdesk.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opsdesk-api
                port: { number: 80 }
